:wrench: Fixes
* Correctly routes login or setup profile if user is new.
* Only shows profiles that are not new & are not yourself.
* Fixed profile form page not showing correct profile.
* Fixed duplicate message sending.

--- a/spotify_chat/assets/styles/chat.css
+++ b/spotify_chat/assets/styles/chat.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
-
 * {
     font-family: 'Open Sans', sans-serif;
     /* color: #7e7e7e; */
@@ -9,12 +8,19 @@ html {
     scroll-behavior: smooth;
 }
 
-html, body, main {
+html,
+body,
+main {
     width: 100%;
     height: 100%;
 }
 
-body, main, nav, #content_area, form, #chat_box  {
+body,
+main,
+nav,
+#content_area,
+form,
+#chat_box {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -41,7 +47,7 @@ main {
 nav {
     flex-direction: row;
     justify-content: space-between;
-    background-color:#ebebeb;
+    background-color: #ebebeb;
     width: 100%;
     height: 10%;
     padding: 0 1rem;
@@ -92,7 +98,8 @@ select option {
     height: 100%;
 }
 
-button, input {
+button,
+input {
     background-color: white;
     padding: .75rem 1rem;
     border-radius: .25rem;
@@ -123,6 +130,7 @@ form button {
 #sign_up_button {
     background-color: #0089ff;
 }
+
 
 /* Chat Form */
 
@@ -199,6 +207,7 @@ button#send_button {
     margin: 2rem 0;
 }
 
+
 /* Profile */
 
 #profile_button {
@@ -232,7 +241,6 @@ button#send_button {
 
 #profile_btm {
     padding: 1rem;
-    
 }
 
 .stat_li {
@@ -250,6 +258,7 @@ button#send_button {
     margin-bottom: 0;
     border: none;
 }
+
 
 /* Checkbox on form */
 
@@ -273,6 +282,7 @@ button#send_button {
     margin-right: .5rem;
     pointer-events: none;
 }
+
 
 /* Player */
 
